--- a/src/app/work/projects/clinical-ner-synthetic.mdx
+++ b/src/app/work/projects/clinical-ner-synthetic.mdx
@@ -1,22 +1,41 @@
 ---
-title: "French Clinical NER (Synthetic Dataset)"
+title: "Creation of a Synthetic Dataset for French NER"
 publishedAt: "2024-06-01"
 tags: ["NLP", "NER", "Clinical"]
 links:
   - { label: "GitHub", href: "https://github.com/Pipe1213/Creation-of-a-synthetic-dataset-for-French-NER-in-clinical-trial-texts" }
-summary: "Synthetic French clinical NER dataset + experiments. A starting point for entity extraction in trial texts."
+summary: "Built a multilingual pipeline using Hugging Face Transformers and XLM-RoBERTa fine-tuning to create the first synthetic French NER dataset for clinical-trial texts. Combined neural translation and cross-lingual transfer to overcome data scarcity in the medical domain."
 images:
   - "/images/clinical-ner-cover.jpg"
 link: "https://github.com/Pipe1213/Creation-of-a-synthetic-dataset-for-French-NER-in-clinical-trial-texts"
 ---
 
-**Focus**
-- Generate **synthetic** sentences around trials and clinical mentions.
-- Train simple baselines; report precision/recall and error types.
+Creation of a Synthetic Dataset for French Named Entity Recognition (NER) in Clinical Trial Texts
 
-**Stack**
-- Python, spaCy/HF token classification (lightweight setup)
-- Reproducible notebooks and seeds
+## Goal
+Develop a synthetic French dataset to improve Named Entity Recognition (NER) in the medical domain, focusing on clinical-trial eligibility criteria. The project explored cross-lingual transfer and synthetic data generation to overcome the scarcity of annotated resources in French.
 
-**Lessons**
-- Synthetic data helps kick-start models when real data is limited, but careful prompt design matters a lot.
+## Overview
+We designed a multilingual pipeline that automatically translated and annotated English clinical-trial texts into French. The system combined neural machine translation with XLM-RoBERTa fine-tuning to produce high-quality NER labels for French data, enabling downstream NLP research and medical-text understanding.
+
+## Approach
+
+- Started from the CHIA dataset of English clinical-trial criteria and selected non-overlapping medical entities.
+- Translated all sentences from English → French using the Helsinki-NLP/opus-mt-en-fr model and evaluated translation quality with BLEU, TER, and METEOR, confirming superior performance to T5 and GPT-4 baselines.
+- Fine-tuned XLM-RoBERTa-base for token classification on the English data using Hugging Face Transformers and validated its cross-lingual performance on MultiNERD, achieving strong generalization to French.
+- Used the fine-tuned model to automatically annotate the translated French corpus, producing the first synthetic French NER dataset for clinical trials.
+- Implemented all processing in Python and Jupyter, with Transformers, Datasets, Torch, NLTK, and Weights & Biases for training tracking.
+
+## Results & Impact
+
+- Demonstrated that a model trained purely on English data can effectively perform cross-lingual NER on French, with consistent precision/recall trends on MultiNERD.
+- Generated and released a new open-source dataset on Hugging Face: [JavierLopetegui/chia-ner-french](https://huggingface.co/datasets/JavierLopetegui/chia-ner-french).
+- Validated translation reliability and entity consistency, showing that synthetic annotation can significantly expand resources for under-represented languages.
+
+## Tech Stack
+Python • Hugging Face Transformers & Datasets • PyTorch • XLM-RoBERTa • Helsinki-NLP opus-mt-en-fr • NLTK • Weights & Biases • Jupyter
+
+## Keywords
+Cross-lingual NER • Synthetic Data Generation • Machine Translation • XLM-RoBERTa • Clinical Trials • French NLP
+
+> For full code and details, see the GitHub repository linked above.
