--- a/src/app/work/projects/sql-agent-cfm.mdx
+++ b/src/app/work/projects/sql-agent-cfm.mdx
@@ -4,7 +4,7 @@ publishedAt: "2025-09-01"
 tags: ["LangGraph", "RAG", "Oracle", "Agents"]
 links:
   - { label: "Overview", href: "/#contact" }   # or replace later with a public case study
-summary: "Natural language → SQL for enterprise data teams, with plan/execute steps, schema + example retrieval, and a robust evaluation harness."
+summary: "Developed a functional SQL Agent at Capital Fund Management (CFM) using LangChain and LangGraph, integrating hybrid retrieval and agentic reasoning to translate natural-language questions into accurate SQL queries. Achieved 88% accuracy and 93% correct table selection on internal datasets. Tech: Python, LangChain, LangGraph, Oracle SQL, Streamlit, ChromaDB, BM25, RRF"
 images:
   - "/images/sql-agent-cover.jpg"
 link: "/contact"
@@ -92,3 +92,6 @@ Drawing from the latest iteration, the system now includes these improvements:
 - Hybrid search finds the right tables even when names are opaque and comments are sparse.
 - Safer visualization yields professional charts consistently, without crashes from malformed code.
 - The UI makes SQL transparent: users see and reuse the exact queries behind answers.
+
+## Links
+- Internship Report (PDF): /cfm.pdf
