--- a/src/app/work/projects/clinical-ner-synthetic.mdx
+++ b/src/app/work/projects/clinical-ner-synthetic.mdx
@@ -39,3 +39,6 @@ Python • Hugging Face Transformers & Datasets • PyTorch • XLM-RoBERTa • 
 Cross-lingual NER • Synthetic Data Generation • Machine Translation • XLM-RoBERTa • Clinical Trials • French NLP
 
 > For full code and details, see the GitHub repository linked above.
+
+## Links
+- GitHub: https://github.com/Pipe1213/Creation-of-a-synthetic-dataset-for-French-NER-in-clinical-trial-texts
