--- a/src/app/work/projects/vits-tutorial.mdx
+++ b/src/app/work/projects/vits-tutorial.mdx
@@ -2,6 +2,7 @@
 title: "VITS Training Tutorial"
 publishedAt: "2024-12-10"
 tags: ["VITS", "Tutorial", "TTS"]
+order: 999
 links:
   - { label: "GitHub", href: "https://github.com/Pipe1213/VITS_Tutorial" }
 summary: "Built a complete training pipeline for VITS, combining variational autoencoding, adversarial learning, and normalizing flows for high-quality speech synthesis. Published models and training guide on Hugging Face for open research. Tech: Python, PyTorch, Hugging Face, Cython, Jupyter"
@@ -37,3 +38,5 @@ Python • PyTorch • Hugging Face Transformers • NumPy • Matplotlib • Cy
 ## Keywords
 Text-to-Speech • VITS • Generative Models • Variational Autoencoding • Adversarial Training • Speech Synthesis • PyTorch
 
+## Links
+- GitHub: https://github.com/Pipe1213/VITS_Tutorial
