fixed links error on projects

--- a/src/app/work/projects/clinical-ner-synthetic.mdx
+++ b/src/app/work/projects/clinical-ner-synthetic.mdx
@@ -41,4 +41,4 @@ Cross-lingual NER • Synthetic Data Generation • Machine Translation • XLM-
 > For full code and details, see the GitHub repository linked above.
 
 ## Links
-- GitHub: https://github.com/Pipe1213/Creation-of-a-synthetic-dataset-for-French-NER-in-clinical-trial-texts
+- [GitHub](https://github.com/Pipe1213/Creation-of-a-synthetic-dataset-for-French-NER-in-clinical-trial-texts)
