--- a/src/app/work/projects/sql-agent-cfm.mdx
+++ b/src/app/work/projects/sql-agent-cfm.mdx
@@ -7,7 +7,7 @@ links:
 summary: "Developed a functional SQL Agent at Capital Fund Management (CFM) using LangChain and LangGraph, integrating hybrid retrieval and agentic reasoning to translate natural-language questions into accurate SQL queries. Achieved 88% accuracy and 93% correct table selection on internal datasets. Tech: Python, LangChain, LangGraph, Oracle SQL, Streamlit, ChromaDB, BM25, RRF"
 images:
   - "/images/sql-agent-cover.jpg"
-link: "/contact"
+link: "/cfm.pdf"
 ---
 
 ## Overview
@@ -94,4 +94,4 @@ Drawing from the latest iteration, the system now includes these improvements:
 - The UI makes SQL transparent: users see and reuse the exact queries behind answers.
 
 ## Links
-- Internship Report (PDF): /cfm.pdf
+- [Internship Report (PDF)](/cfm.pdf)
