--- a/src/app/work/projects/vits-tutorial.mdx
+++ b/src/app/work/projects/vits-tutorial.mdx
@@ -39,4 +39,4 @@ Python • PyTorch • Hugging Face Transformers • NumPy • Matplotlib • Cy
 Text-to-Speech • VITS • Generative Models • Variational Autoencoding • Adversarial Training • Speech Synthesis • PyTorch
 
 ## Links
-- GitHub: https://github.com/Pipe1213/VITS_Tutorial
+- [GitHub](https://github.com/Pipe1213/VITS_Tutorial)
