--- a/src/app/work/projects/walloon-tts-ssw13.mdx
+++ b/src/app/work/projects/walloon-tts-ssw13.mdx
@@ -72,5 +72,5 @@ First text-to-speech (TTS) system for Walloon, an under‑resourced minority lan
 - Measure both automatic metrics and human ratings; report confidence intervals.
 
 ## Links
-- Paper: https://www.isca-archive.org/ssw_2025/orjuela25_ssw.pdf
-- Models: https://huggingface.co/Pipe1213
+- [Paper](https://www.isca-archive.org/ssw_2025/orjuela25_ssw.pdf)
+- [Models](https://huggingface.co/Pipe1213)
