--- a/src/app/work/projects/sfm-3d-reconstruction.mdx
+++ b/src/app/work/projects/sfm-3d-reconstruction.mdx
@@ -43,4 +43,4 @@ Structure from Motion, 3D Reconstruction, Computer Vision, Epipolar Geometry, Ca
 [Download the project report (PDF)](/sfm.pdf)
 
 ## Links
-- GitHub: https://github.com/Biruk-Abere/3D-reconstruction-from-multi-view-images
+- [GitHub](https://github.com/Biruk-Abere/3D-reconstruction-from-multi-view-images)
